set(mmsle_SRCS
  ${SOURCE_TOP_DIR}/mms_ced1.c
  ${SOURCE_TOP_DIR}/mms_ced2.c
  ${SOURCE_TOP_DIR}/rq_altec.c
  ${SOURCE_TOP_DIR}/rq_altee.c
  ${SOURCE_TOP_DIR}/rq_crepi.c
  ${SOURCE_TOP_DIR}/rq_defea.c
  ${SOURCE_TOP_DIR}/rq_defec.c
  ${SOURCE_TOP_DIR}/rq_defsc.c
  ${SOURCE_TOP_DIR}/rq_defse.c
  ${SOURCE_TOP_DIR}/rq_defty.c
  ${SOURCE_TOP_DIR}/rq_defva.c
  ${SOURCE_TOP_DIR}/rq_defvl.c
  ${SOURCE_TOP_DIR}/rq_deldo.c
  ${SOURCE_TOP_DIR}/rq_delea.c
  ${SOURCE_TOP_DIR}/rq_delec.c
  ${SOURCE_TOP_DIR}/rq_delee.c
  ${SOURCE_TOP_DIR}/rq_delpi.c
  ${SOURCE_TOP_DIR}/rq_delse.c
  ${SOURCE_TOP_DIR}/rq_delty.c
  ${SOURCE_TOP_DIR}/rq_delva.c
  ${SOURCE_TOP_DIR}/rq_delvl.c
  ${SOURCE_TOP_DIR}/rq_downl.c
  ${SOURCE_TOP_DIR}/rq_fclos.c
  ${SOURCE_TOP_DIR}/rq_fdele.c
  ${SOURCE_TOP_DIR}/rq_frena.c
  ${SOURCE_TOP_DIR}/rq_fdir.c
  ${SOURCE_TOP_DIR}/rq_fopen.c
  ${SOURCE_TOP_DIR}/rq_fread.c
  ${SOURCE_TOP_DIR}/rq_getae.c
  ${SOURCE_TOP_DIR}/rq_getas.c
  ${SOURCE_TOP_DIR}/rq_getsc.c
  ${SOURCE_TOP_DIR}/rq_initd.c
  ${SOURCE_TOP_DIR}/rq_initu.c
  ${SOURCE_TOP_DIR}/rq_input.c
  ${SOURCE_TOP_DIR}/rq_jcrea.c
  ${SOURCE_TOP_DIR}/rq_jdele.c
  ${SOURCE_TOP_DIR}/rq_jinit.c
  ${SOURCE_TOP_DIR}/rq_jread.c
  ${SOURCE_TOP_DIR}/rq_jstat.c
  ${SOURCE_TOP_DIR}/rq_jwrit.c
  ${SOURCE_TOP_DIR}/rq_kill.c
  ${SOURCE_TOP_DIR}/rq_loadd.c
  ${SOURCE_TOP_DIR}/rq_obtfi.c
  ${SOURCE_TOP_DIR}/rq_outpu.c
  ${SOURCE_TOP_DIR}/rq_rddwn.c
  ${SOURCE_TOP_DIR}/rq_rdupl.c
  ${SOURCE_TOP_DIR}/rq_relct.c
  ${SOURCE_TOP_DIR}/rq_renam.c
  ${SOURCE_TOP_DIR}/rq_reset.c
  ${SOURCE_TOP_DIR}/rq_resum.c
  ${SOURCE_TOP_DIR}/rq_rsent.c
  ${SOURCE_TOP_DIR}/rq_rspoo.c
  ${SOURCE_TOP_DIR}/rq_rssta.c
  ${SOURCE_TOP_DIR}/rq_start.c
  ${SOURCE_TOP_DIR}/rq_stop.c
  ${SOURCE_TOP_DIR}/rq_store.c
  ${SOURCE_TOP_DIR}/rq_takec.c
  ${SOURCE_TOP_DIR}/rq_termd.c
  ${SOURCE_TOP_DIR}/rq_termu.c
  ${SOURCE_TOP_DIR}/rq_uploa.c
  ${SOURCE_TOP_DIR}/rs_altec.c
  ${SOURCE_TOP_DIR}/rs_altee.c
  ${SOURCE_TOP_DIR}/rs_crepi.c
  ${SOURCE_TOP_DIR}/rs_defea.c
  ${SOURCE_TOP_DIR}/rs_defec.c
  ${SOURCE_TOP_DIR}/rs_defsc.c
  ${SOURCE_TOP_DIR}/rs_defse.c
  ${SOURCE_TOP_DIR}/rs_defty.c
  ${SOURCE_TOP_DIR}/rs_defva.c
  ${SOURCE_TOP_DIR}/rs_defvl.c
  ${SOURCE_TOP_DIR}/rs_deldo.c
  ${SOURCE_TOP_DIR}/rs_delea.c
  ${SOURCE_TOP_DIR}/rs_delec.c
  ${SOURCE_TOP_DIR}/rs_delee.c
  ${SOURCE_TOP_DIR}/rs_delpi.c
  ${SOURCE_TOP_DIR}/rs_delse.c
  ${SOURCE_TOP_DIR}/rs_delty.c
  ${SOURCE_TOP_DIR}/rs_delva.c
  ${SOURCE_TOP_DIR}/rs_delvl.c
  ${SOURCE_TOP_DIR}/rs_downl.c
  ${SOURCE_TOP_DIR}/rs_fclos.c
  ${SOURCE_TOP_DIR}/rs_fdele.c
  ${SOURCE_TOP_DIR}/rs_frena.c
  ${SOURCE_TOP_DIR}/rs_fdir.c
  ${SOURCE_TOP_DIR}/rs_fopen.c
  ${SOURCE_TOP_DIR}/rs_fread.c
  ${SOURCE_TOP_DIR}/rs_getae.c
  ${SOURCE_TOP_DIR}/rs_getas.c
  ${SOURCE_TOP_DIR}/rs_getsc.c
  ${SOURCE_TOP_DIR}/rs_initd.c
  ${SOURCE_TOP_DIR}/rs_initu.c
  ${SOURCE_TOP_DIR}/rs_input.c
  ${SOURCE_TOP_DIR}/rs_jcrea.c
  ${SOURCE_TOP_DIR}/rs_jdele.c
  ${SOURCE_TOP_DIR}/rs_jinit.c
  ${SOURCE_TOP_DIR}/rs_jread.c
  ${SOURCE_TOP_DIR}/rs_jstat.c
  ${SOURCE_TOP_DIR}/rs_jwrit.c
  ${SOURCE_TOP_DIR}/rs_kill.c
  ${SOURCE_TOP_DIR}/rs_loadd.c
  ${SOURCE_TOP_DIR}/rs_obtfi.c
  ${SOURCE_TOP_DIR}/rs_outpu.c
  ${SOURCE_TOP_DIR}/rs_rddwn.c
  ${SOURCE_TOP_DIR}/rs_rdupl.c
  ${SOURCE_TOP_DIR}/rs_relct.c
  ${SOURCE_TOP_DIR}/rs_renam.c
  ${SOURCE_TOP_DIR}/rs_reset.c
  ${SOURCE_TOP_DIR}/rs_resum.c
  ${SOURCE_TOP_DIR}/rs_rsent.c
  ${SOURCE_TOP_DIR}/rs_rspoo.c
  ${SOURCE_TOP_DIR}/rs_rssta.c
  ${SOURCE_TOP_DIR}/rs_start.c
  ${SOURCE_TOP_DIR}/rs_stop.c
  ${SOURCE_TOP_DIR}/rs_store.c
  ${SOURCE_TOP_DIR}/rs_takec.c
  ${SOURCE_TOP_DIR}/rs_termd.c
  ${SOURCE_TOP_DIR}/rs_termu.c
  ${SOURCE_TOP_DIR}/rs_uploa.c
)

include_directories(${PUBLIC_INC_DIR})

add_subdirectory(mmsle_l)
add_subdirectory(mmsle_n)
add_subdirectory(mmsle_ld)
add_subdirectory(mmsle_nd)
